k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weightr-backend
  labels:
    app: weightr-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weightr-backend
  template:
    metadata:
      labels:
        app: weightr-backend
    spec:
      dnsPolicy: Default  # attempt to resolve dns resolution errors with e.g., api.smith.langchain.com
      volumes:
        - name: encrypted-conf
          persistentVolumeClaim:
            claimName: pvc-weightr-backend-conf
        - name: decrypted-conf
          emptyDir: {}
      containers:
      - name: weightr-backend
        image: weightr-backend:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: decrypted-conf
            mountPath: /mnt/decrypted
            readOnly: true
        ports:
        - containerPort: 8088
          name: web
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
